--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.5.0",
+    "@material-ui/icons": "^2.0.3",
     "@material-ui/lab": "^1.0.0-alpha.10",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chart.js": "^2.7.2",
     "cors": "^2.8.4",
+    "date-fns": "^2.0.0-alpha.7",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "massive": "^5.2.0",
+    "material-ui-pickers": "^1.0.0-rc.13",
     "moment": "^2.22.2",
     "passport": "^0.4.0",
     "passport-auth0": "^1.0.0",
