--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.5.0",
     "@material-ui/icons": "^2.0.3",
     "@material-ui/lab": "^1.0.0-alpha.10",
+    "aos": "^2.3.3",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chart.js": "^2.7.2",
