--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_LOGIN="http://localhost:3005/auth"
+REACT_APP_LOGOUT="http://localhost:3005/auth/logout"
 SESSION_SECRET=my-session-secret
 AUTH_DOMAIN=hhhn.auth0.com
 AUTH_CLIENT_ID=ZDGy0dgJnJXwV52BHOo13i9EznFGUfKg
